# hap-rs

./: Cargo.toml
src/: config.rs
src/transport/: tcp.rs
src/transport/http/: mod.rs
src/transport/http/handler/: mod.rs  pair_setup.rs  pair_verify.rs  pairings.rs
