[package]
name = "hap"
version = "0.1.0-pre.15"
authors = ["Elias Wilken <elias@wlkn.io>"]
edition = "2021"
description = "Rust implementation of the Apple HomeKit Accessory Protocol (HAP)"
documentation = "https://docs.rs/hap"
readme = "README.md"
repository = "https://github.com/ewilken/hap-rs"
license = "MIT/Apache-2.0"
keywords = ["apple", "homekit"]
exclude = [
    ".github",
    ".gitignore",
    "examples",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "rls.toml",
    "rustfmt.toml",
]

[dependencies]
aead = "0.4"
async-trait = "0.1"
byteorder = "1.3"
bytes = "1.0"
chacha20poly1305 = "0.8.0"
ed25519-dalek = { version = "2.1.1", features = ["std", "serde", "rand_core"] }
erased-serde = "0.4.5"
macaddr = { version = "1.0.1", features = ["serde"] }
futures = "0.3"
if-addrs = "0.13.3"
hkdf = "0.12.4"
hyper = { version = "0.14.31", features = ["server", "http1"] }
libmdns = "0.9.1"
log = "0.4"
num = "0.4.3"
rand_core = "0.6"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
# signature = { version = ">=2.0, <2.3", optional = true, default-features = false }
signature = "2.2"
srp = "0.6.0"
thiserror = "1.0"
tokio = "1.41.1"
url = "2.1"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
x25519-dalek = "2.0.1"
hex = "0.4.3"

[build-dependencies]
handlebars = "6.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
env_logger = "0.11.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "time", "macros"] }

[workspace]
members = ["codegen"]
